# Anlasser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/anlasser/: AnlasserAgent.py  AnlasserAgentCli.py  AnlasserClient.py  AnlasserClientCli.py  AnlasserErrors.py  AnlasserMkVM.py  AnlasserMkVMCli.py  AnlasserVM.py  AnlasserVMCli.py
tests/: test_anlasservm_mock_subprocess.py
