[tool.poetry]
name = "Anlasser"
version = "0.0.3"
description = ""
authors = ["Aljoscha Vollmerhaus <git@aljoscha.vollmerhaus.net>"]
readme = "README.md"
packages = [{include = "anlasser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anlasser-ctl = 'anlasser.AnlasserClientCli:client_cli'
anlasser-agent = 'anlasser.AnlasserAgentCli:agent_cli'
anlasser-vm = 'anlasser.AnlasserVMCli:vm_cli'
anlasser-mkvm = 'anlasser.AnlasserMkVMCli:mkvm_cli'
